--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eloisa Abrantes</title>
 </head>
 <body>
     
+<header>
+
+    <div class="HEADERSLINKS">
+        <div class="LOGO"><img src="C:\Users\jhaca\OneDrive\Documentos\GitHub\RP\Frontend\imagens\Removal-798 (1).png" alt="Logo sem fundo EA"></div>
+        <div class="LINKS">
+            <ul>
+                <a href="INICIO">Inicio</a>
+                <a href="SOLUÇÕES">Soluções</a>
+                <a href="CONTATO">Contato</a>
+                <a href="CC">Central do Consultor</a>
+            </ul>
+        </div>
+    </div>
+    
+</header>
+
+<main>
+    <div class="TituloP"><h1>Por trás de cada solução,</h1></div>
+    <div class="TituloS"><p>um compromisso com o coletivo</p></div>
+    <div class="TituloT"><p>Cada diagnóstico, plano ou intervenção que entregamos carrega mais do que conhecimento especializado:carrega a responsabilidade de impactar vidas</p></div>
+    <div class="BotaoU"><a href="ChatWhats">Agende uma Reunião</a></div>
+    <div class="BotaoD"><a href="EspecialistaWhats">Fale com especialista</a></div>
+</main>
+
 </body>
 </html>
