--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eloisa Abrantes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -12,12 +13,10 @@
     <div class="HEADERSLINKS">
         <div class="LOGO"><img src="C:\Users\jhaca\OneDrive\Documentos\GitHub\RP\Frontend\imagens\Removal-798 (1).png" alt="Logo sem fundo EA"></div>
         <div class="LINKS">
-            <ul>
                 <a href="INICIO">Inicio</a>
                 <a href="SOLUÇÕES">Soluções</a>
                 <a href="CONTATO">Contato</a>
                 <a href="CC">Central do Consultor</a>
-            </ul>
         </div>
     </div>
     
