--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,8 +23,6 @@
 
 </head>
 <body>
-
-<div class="BACKGROUND"> 
     <header>
         <div class="HEADERSLINKS">
             <div class="LOGO"><img src="C:\Users\jhaca\OneDrive\Documentos\GitHub\RP\Frontend\imagens\Removal-798 (1).png" class ="LOGO1"></div>
@@ -37,6 +35,7 @@
         </div>   
     </header>
 
+
     <section class="MENUPRINCIPAL">
         <div class="TituloP"><h1>Por trás de cada solução,</h1></div>
         <div class="TituloS"><p>um compromisso com o coletivo</p></div>
@@ -47,11 +46,11 @@
         </div>
     </section>
 
-    <section class="APRESENTACAOELO">
-        <div class="BOXELOAP"></div>
-        <div class="BOXEGRAFICO"></div>
-        <div class="BOXEFORCA"></div>
+    <section class="GRIDAPRESENTACAO">
+        <div class="BOXELOAP FORMAGRID"></div>
+        <div class="BOXEFORCA FORMAGRID"></div>
+        <div class="BOXEGRAFICO FORMAGRID"></div>
     </section>   
-</div>  
+
 </body>
 </html>
