--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Biryani:wght@300&display=swap" rel="stylesheet">
-                    
+     
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -48,8 +50,8 @@
 
     <section class="GRIDAPRESENTACAO">
         <div class="BOXELOAP FORMAGRID"></div>
-        <div class="BOXEFORCA FORMAGRID"></div>
         <div class="BOXEGRAFICO FORMAGRID"></div>
+        <div class="BOXEFORCA FORMAGRID"></div>
     </section>   
 
 </body>
