--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -49,7 +49,16 @@
     </section>
 
     <section class="GRIDAPRESENTACAO">
-        <div class="BOXELOAP FORMAGRID"></div>
+        <div class="BOXELOAP FORMAGRID">
+            <div class="PRIMEIRADIVISAO">
+                <div class="boneco1"></div>
+                <div class="boneco1corpo"></div>
+                <div class="balao1">
+                    <div class="textobalao1">elô, boa noite!</div>
+                    <div class="textobalao2">00:05</div>
+                </div>
+            </div>
+        </div>
         <div class="BOXEGRAFICO FORMAGRID"></div>
         <div class="BOXEFORCA FORMAGRID"></div>
     </section>   
