--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -50,13 +50,23 @@
 
     <section class="GRIDAPRESENTACAO">
         <div class="BOXELOAP FORMAGRID">
+
             <div class="PRIMEIRADIVISAO">
                 <div class="boneco1"></div>
                 <div class="boneco1corpo"></div>
                 <div class="balao1">
-                    <div class="textobalao1">elô, boa noite!</div>
-                    <div class="textobalao2">00:05</div>
+                    <div class="textobalao01">elô, boa noite!</div>
+                    <div class="textobalao1">00:05</div>
                 </div>
+            </div>
+
+            <div class="SEGUNDADIVISAO">
+                <div class="bonecoelo"> <img src="imagens/image 3 (2).png" alt=""></div>
+                <div class="sombraelo1"></div>
+                <div class="balao2">
+                    <div class="textobalao02">olá, como posso te ajudar?</div>
+                    <div class="textobalao2">00:06</div>
+                </div>  
             </div>
         </div>
         <div class="BOXEGRAFICO FORMAGRID"></div>
