--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="HEADERSLINKS">
-            <div class="LOGO"><img src="C:\Users\jhaca\OneDrive\Documentos\GitHub\RP\Frontend\imagens\Removal-798 (1).png" class ="LOGO1"></div>
+            <div class="LOGO"><img src="imagens/Removal-798 (1).png" class ="LOGO1"></div>
             <div class="LINKS">
                     <a href="INICIO">Inicio</a>
                     <a href="SOLUÇÕES">Soluções</a>
@@ -68,9 +68,41 @@
                     <div class="textobalao2">00:06</div>
                 </div>  
             </div>
+
+            <div class="TERCEIRADIVISAO">
+
+                <div class="Suporte24h">
+                    <div class="TEXTOBOXES1">Ao seu lado, com soluções rápidas e eficazes</div>
+                    <div class="TEXTOBOXES2">Suporte 24 horas, sempre pronto para oferecer soluções rápidas e garantir o bom funcionamento dos seus processos.</div>
+                </div>
+            </div>
+
+
         </div>
-        <div class="BOXEGRAFICO FORMAGRID"></div>
-        <div class="BOXEFORCA FORMAGRID"></div>
+
+
+        <div class="BOXEGRAFICO FORMAGRID">
+            <div class="imggrafico"> <img src="imagens/Vector 7.png" alt=""></div>
+            <div class="graficotexto">
+                <div class="TEXTOBOXES1">Compromisso com o progresso e a excelência em cada etapa</div>
+                <div class="TEXTOBOXES2">Apostamos no crescimento contínuo e na busca incessante pela qualidade, para garantir resultados sólidos e sustentáveis para o seu sucesso.</div>
+            </div>
+        </div>
+
+
+        <div class="BOXEFORCA FORMAGRID">
+            <div class="vetor"> <img src="imagens/Vector 11.png" alt=""> </div>
+            <div class="vetor1"><img src="imagens/Vector 12.png" alt=""></div>
+            <div class="vetor2"><img src="imagens/Vector 12.png" alt=""></div>
+
+            <div class="FORCATEXTO">
+                <div class="TEXTOBOXES1">Compromisso com o progresso e a excelência em cada etapa</div>
+                <div class="TEXTOBOXES2">Apostamos no crescimento contínuo e na busca incessante pela qualidade, para garantir resultados sólidos e sustentáveis para o seu sucesso.</div>
+            </div>
+            
+        </div>
+
+
     </section>   
 
 </body>
