--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -76,8 +76,6 @@
                     <div class="TEXTOBOXES2">Suporte 24 horas, sempre pronto para oferecer soluções rápidas e garantir o bom funcionamento dos seus processos.</div>
                 </div>
             </div>
-
-
         </div>
 
 
@@ -94,16 +92,37 @@
             <div class="vetor"> <img src="imagens/Vector 11.png" alt=""> </div>
             <div class="vetor1"><img src="imagens/Vector 12.png" alt=""></div>
             <div class="vetor2"><img src="imagens/Vector 12.png" alt=""></div>
-
             <div class="FORCATEXTO">
                 <div class="TEXTOBOXES1">Compromisso com o progresso e a excelência em cada etapa</div>
                 <div class="TEXTOBOXES2">Apostamos no crescimento contínuo e na busca incessante pela qualidade, para garantir resultados sólidos e sustentáveis para o seu sucesso.</div>
-            </div>
-            
+            </div>   
         </div>
-
 
     </section>   
 
+
+    <section class="SOLUCOESINTELIGENTES">
+        <div class="SLOGAMINOVACAO">Mente brilhante, sistema inteligente</div>
+        <div class="GRIDINOVACAO">
+            <div class="ELOINOVACAO BOXGRID2">
+                <div class="botaoaviso TEXTOBOXES2">
+                    <div class="novo TEXTOBOXES2">NOVO</div>
+                </div>
+                <div class="eloimg"><img src="imagens/image 3 (3).png" alt=""></div>
+                <div class="sombravermelha"></div>
+                <div class="sombrapreta"></div>
+                <div class="TEXTOSELO1">
+                    <div class="TEXTOBOXES1">Descubra a “Elô”</div>
+                    <div class="TEXTOBOXES2">Nós acreditamos que a inovação é a chave para uma gestão de saúde mais eficiente e humanizada. Nossa Inteligência Artificial é projetada para apoiar decisões estratégicas, otimizando e garantindo que cada ação contribua para um impacto positivo no coletivo, sempre com excelência e transparência.</div>
+                </div>
+            </div>
+
+
+            <div class="AREADEMEMBROS BOXGRID2">
+
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
