--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -119,6 +119,37 @@
 
 
             <div class="AREADEMEMBROS BOXGRID2">
+                <div class="botaoaviso TEXTOBOXES2">
+                    <div class="novo TEXTOBOXES2">EM BREVE</div>
+                </div>
+    
+                <div class="desiningsitemembros">
+                    <div class="logomembros0"> <img  class="logomembros" src="imagens/Removal-798 (1).png" alt=""></div>
+                    <div class="tracodiv"></div>
+                    <div class="navmembros">
+                        <div class="textonav"></div>
+                            <div class="on-boarding textonav1">On-boarding</div>
+                            <div class="treinamentos textonav1">Treinamentos</div>
+                            <div class="certificados textonav1">Certificados</div>
+                        </div>
+                        <div class="telavideo">
+                            <div class="botao-play">
+                                <div class="triangulo"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sombraaream">ola</div>
+                    <div class="sombrapreta2"></div>
+
+                    <div class="TEXTOSELO2">
+                        <div class="TEXTOBOXES1">Área de membros</div>
+                        <div class="TEXTOBOXES2">Aqui você encontra os treinamentos, materiais estratégicos e orientações que vão te acompanhar desde o primeiro passo até a atuação prática. Tudo o que você precisa para dominar as soluções e impactar resultados com segurança.</div>
+                    </div>
+                </div>
+                </div>
+
+                
 
 
             </div>
