--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -148,12 +148,10 @@
                     </div>
                 </div>
                 </div>
-
-                
-
-
             </div>
         </div>
     </section>
+
+    <section class="imgprefeituras"></section>
 </body>
 </html>
