--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -132,12 +132,14 @@
                             <div class="treinamentos textonav1">Treinamentos</div>
                             <div class="certificados textonav1">Certificados</div>
                         </div>
+                        <div class="aula1 TEXTOBOXES1">Aula-01</div>
                         <div class="telavideo">
                             <div class="botao-play">
                                 <div class="triangulo"></div>
                             </div>
                         </div>
                     </div>
+                    
 
                     <div class="sombraaream">ola</div>
                     <div class="sombrapreta2"></div>
