--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -154,6 +154,141 @@
         </div>
     </section>
 
-    <section class="imgprefeituras"></section>
+    <section class="imgprefeituras">
+        <div class="HISTORIASJUNTOS">
+            <div class="TEXTOHISTORIAJUNTOS">Histórias que contamos Juntos:</div>
+        </div>
+
+        <div class="imglugares">
+            <div class="todasimg">
+                <div class="abujamaimg"> <img src="imagens/LOGO_ABUJAMA-removebg-preview (1).png" alt=""></div>
+                <div class="apaeimg"> <img src="imagens/Background.png" alt=""></div>
+                <div class="auriflamaimg"> <img src="imagens/Background (1).png" alt=""></div>
+                <div class="badyimg"> <img src="imagens/Background (2).png" alt=""></div>
+                <div class="pitanguiimg"> <img src="imagens/Background (3).png" alt=""></div>
+                <div class="mirandopolisimg"><img src="imagens/Background (4).png" alt=""></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="NOSSOSSERVIÇOA">
+        <div class="NossaConsultoria">
+            <div class="Textonossaconsultoria">Nossa Consultoria</div>
+        </div>
+
+        <div class="BOXESCONSULTORIA">
+            <div class="BOXESC1">
+                <div class="apresentalista">
+                    <div class="imgboneco"><img src="imagens/Person.png" alt=""></div>
+                    <div class="litaboxe">Lista</div>
+                    <div class="imgflexabaixo"><img src="imagens/Expand Arrow.png" alt=""></div>
+                </div>
+
+                <div class="cardpessoas">
+                    <div class="apresentasuporte">
+                        <div class="iconesuporte">
+                            <div class="iconesuporte2"></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Suporte on-line disponível</div>
+                            <div class="textoapresenta2">Conheça nosso time de suporte </div>
+                        </div>
+                    </div>
+                     <div class="divisor"></div>
+
+                    <div class="pessoaspres">
+                        <div class="iconperson">
+                            <div class="iconpersonimg"><img class="iconpersonimg" src="imagens/Person(1).png" alt=""></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Jéssica</div>
+                            <div class="textoapresenta2">Atendimento e orientação técnica via canais digitais</div>
+                        </div>
+                    </div>
+                    <div class="divisor"></div>
+
+                     <div class="pessoaspres">
+                        <div class="iconperson">
+                            <div class="iconpersonimg"><img class="iconpersonimg" src="imagens/Person(1).png" alt=""></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Daniela</div>
+                            <div class="textoapresenta2">Diagnóstico e encaminhamento de problemas técnicos complexos</div>
+                        </div>
+                    </div>
+                    <div class="divisor"></div>
+
+                     <div class="pessoaspres">
+                        <div class="iconperson">
+                            <div class="iconpersonimg"><img class="iconpersonimg" src="imagens/Person(1).png" alt=""></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Gabriela</div>
+                            <div class="textoapresenta2">Acompanhamento periódico dos sistemas de saúde dos clientes</div>
+                        </div>
+                    </div>
+                    <div class="divisor"></div>
+
+                     <div class="pessoaspres">
+                        <div class="iconperson">
+                            <div class="iconpersonimg"><img class="iconpersonimg" src="imagens/Person(1).png" alt=""></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Adriano</div>
+                            <div class="textoapresenta2">Acompanhamento periódico dos sistemas de saúde dos clientes</div>
+                        </div>
+                    </div>
+                    <div class="divisor"></div>
+
+                     <div class="pessoaspres">
+                        <div class="iconperson">
+                            <div class="iconpersonimg"><img class="iconpersonimg" src="imagens/Person(1).png" alt=""></div>
+                        </div>
+
+                        <div class="textosapresenta">
+                            <div class="textoapresenta1">Daniel</div>
+                            <div class="textoapresenta2">Apoio na prestação de contas e elaboração de relatórios técnicos</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="textossuportecard">
+                    <div class="textossuportecard1">Consultoria On-line Especializada</div>
+                    <div class="textossuportecard2">Nossa consultoria on-line oferece acompanhamento técnico contínuo e atendimento direto aos gestores municipais, garantindo eficiência na adesão aos programas de saúde, organização financeira baseada no faturamento hospitalar e ambulatorial, e resolução estratégica das demandas do dia a dia.</div>
+                </div>
+
+                <div class="sombrapreta1"></div>
+            </div>
+
+            <div class="BOXESC2">
+                <div class="imagensboxmapa">
+                    <div class="imgmapa"><img src="imagens/Untitled 1 1.png" alt=""></div>
+                    <div class="vetoresmapa"><img src="imagens/Frame 3.png" alt=""></div>
+                </div>
+
+                 <div class="sombrapreta3"></div>
+
+
+                <div class="textosconsultoriabox">
+                    <div class="textossuportecard1">Consultoria Presencial</div>
+                    <div class="textossuportecard2">Nossa equipe técnica realiza visitas regulares aos municípios para acompanhar de forma estratégica a organização dos serviços de saúde, apoiar os gestores nas decisões do dia a dia e estruturar o planejamento financeiro, com foco no controle de gastos e no uso eficiente dos recursos públicos.  Com atuação direta, ajudamos a transformar desafios locais em soluções práticas e sustentáveis.</div>
+                </div>
+            </div>
+
+            
+            <div class="BOXESC3">
+                <div class="sistemasacompanhamento">
+                    <div class="sistema1"></div>
+                    <div class="sistema2"></div>
+                    <div class="sistema3"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
