--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -283,9 +283,11 @@
             
             <div class="BOXESC3">
                 <div class="sistemasacompanhamento">
-                    <div class="sistema1"></div>
-                    <div class="sistema2"></div>
-                    <div class="sistema3"></div>
+                    <div class="logofns"><img src="imagens/Frame 4 (1).png" alt=""></div>
+                    <div class="textossistemas">
+                        <div class="textossuportecard1">Consultoria Presencial</div>
+                        <div class="textossuportecard2">Nossa equipe técnica realiza visitas regulares aos municípios para acompanhar de forma estratégica a organização dos serviços de saúde, apoiar os gestores nas decisões do dia a dia e estruturar o planejamento financeiro, com foco no controle de gastos e no uso eficiente dos recursos públicos.  Com atuação direta, ajudamos a transformar desafios locais em soluções práticas e sustentáveis.</div>
+                    </div>
                 </div>
             </div>
         </div>
