--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,7 +41,7 @@
     <section class="MENUPRINCIPAL">
         <div class="TituloP"><h1>Por trás de cada solução,</h1></div>
         <div class="TituloS"><p>um compromisso com o coletivo</p></div>
-        <div class="TituloT"><p>Cada diagnóstico, plano ou intervenção que entregamos carrega mais do que conhecimento especializado:<br>carrega a responsabilidade de impactar vidas</p></div>
+        <div class="TituloT"><p>Conhecimento com propósito: impactar vidas.</p></div>
         <div class="BOTOESCHAMADA">
             <div class="BotaoU"><a href="ChatWhats">Agende uma Reunião</a></div>
             <div class="BotaoD"><a href="EspecialistaWhats">Fale com especialista</a></div>
@@ -80,7 +80,7 @@
 
 
         <div class="BOXEGRAFICO FORMAGRID">
-            <div class="imggrafico"> <img src="imagens/Vector 7.png" alt=""></div>
+            <div class="imggrafico"> <img  class="imggrafico01" src="imagens/Vector 7.png" alt=""></div>
             <div class="graficotexto">
                 <div class="TEXTOBOXES1">Compromisso com o progresso e a excelência em cada etapa</div>
                 <div class="TEXTOBOXES2">Apostamos no crescimento contínuo e na busca incessante pela qualidade, para garantir resultados sólidos e sustentáveis para o seu sucesso.</div>
@@ -93,8 +93,8 @@
             <div class="vetor1"><img src="imagens/Vector 12.png" alt=""></div>
             <div class="vetor2"><img src="imagens/Vector 12.png" alt=""></div>
             <div class="FORCATEXTO">
-                <div class="TEXTOBOXES1">Compromisso com o progresso e a excelência em cada etapa</div>
-                <div class="TEXTOBOXES2">Apostamos no crescimento contínuo e na busca incessante pela qualidade, para garantir resultados sólidos e sustentáveis para o seu sucesso.</div>
+                <div class="TEXTOBOXES1">Alta Performance Organizacional</div>
+                <div class="TEXTOBOXES2">Fortalecendo lideranças, otimizando processos e impulsionamos resultados com inteligência e consistência.</div>
             </div>   
         </div>
 
