--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -305,7 +305,8 @@
     </section>
 
 
-    <section class="caixadeenvio" id="CONTATO">
+    <section class="caixadeenvio">
+
         <div class="objetoscaixadeenvio">
             <div class="textos">
                 <div class="vamosconversar">Vamos Conversar?</div>
@@ -313,6 +314,7 @@
             </div>
 
             <div class="boxedeenvio">
+
                 <form action="" class="textos000">
                     <p><label for="itelefone">Telefone</label>
                         <input type="tel" name="telefone" id="itelefone" autocomplete="tel-national" required>
@@ -338,8 +340,6 @@
             </div>
         </div>
     </section>
-
-
 
 </body>
 
